# 42-Python-Piscine

./: .gitignore  README.md
Python - 0 - Starting/Subjects/Ex 02/: find_ft_type.py
Python - 0 - Starting/Subjects/Ex00/: hello.py
Python - 0 - Starting/Subjects/Ex02/: find_ft_type.py
Python - 0 - Starting/Subjects/Ex03/: NULL_not_found.py
Python - 0 - Starting/Subjects/Ex06/: ft_filter.py  ft_filter_test.py
Python - 0 - Starting/Subjects/Ex09/: README.md  setup.cfg
Python - 0 - Starting/Subjects/Ex09/ft_package/: __init__.py  utils.py
Python-0-Starting/Ex01/: format_ft_time.py
Python-0-Starting/Ex03/: NULL_not_found.py
Python-0-Starting/Ex07/: sos.py
Python-0-Starting/Ex08/: Loading.py
Python-0-Starting/Ex09/: LICENSE.txt  README.md  setup.cfg
Python-0-Starting/Subjects/Ex04/: whatis.py
Python-0-Starting/Subjects/Ex05/: building.py
Python-0-Starting/Subjects/Ex06/: filterstring.py
Python-0-Starting/Subjects/Ex08/: Loading.py  tester.py
Python-0-Starting/Subjects/Ex09/: README.md  setup.py
Python-0-Starting/Subjects/Ex09/tests/: test_utils.py
Python-1-Array/: README.md
Python-1-Array/Ex00/: give_bmi.py  tester.py
Python-1-Array/Ex01/: array2D.py  tester.py
Python-1-Array/Ex02/: load_image.py  tester.py
Python-1-Array/Ex03/: load_image.py  zoom.py
Python-1-Array/Ex04/: load_image.py  rotate.py
Python-1-Array/Ex05/: load_image.py  pimp_image.py  tester.py
