[metadata]
name = ft_package
version = 0.0.1
author = Alperen Ruzgar Erbosnali
author_email = aerbosna@42istanbul.com
description = A sample test package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ARuzgar/42-Python-Piscine/tree/main/Python-0-Starting/Subjects/Ex09
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10